Replace getFirst() with get(0) because some of us are rocking java 17